--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
           <a data-scroll href="#aboutme">About Me</a>
           <a data-scroll href="#projects">Projects</a>
           <a href="#contact">Contact</a>
-          <a href="./resources/AustinDemingResume.pdf" download="AustinDemingResume">Resume <i class="fas fa-file-download"></i></a>
+          <a
+            href="./resources/AustinDemingResume.pdf"
+            download="AustinDemingResume"
+            >Resume <i class="fas fa-file-download"></i
+          ></a>
         </div>
       </nav>
     </div>
@@ -85,7 +89,7 @@
           href="javascript:void()"
           class="typewrite break-words"
           data-period="2000"
-          data-type='[ "Hi, my name is Austin.", "I am creative.", "I love to design.", "I love to develop." ]'
+          data-type='[ "Hi, my name is Austin.", "Web developer.", "I love to create, design, and develop." ]'
         ></a>
         <span class="wrap"></span>
       </h1>
@@ -98,7 +102,7 @@
               aria-hidden="true"
             ></i
           ></a>
-          <a href="#"
+          <a href="https://www.linkedin.com/in/austinmdeming"
             ><i
               class="fab fa-linkedin fa-3x"
               title="Austin's LinkedIn"
@@ -250,7 +254,7 @@
             <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
               <rect id="shape" height="40" width="150" />
               <div id="text">
-                <a href="">
+                <a href="https://github.com/austinmdem/spacex-mission-log">
                   <span class="spot"></span>
                   See The Code
                 </a>
@@ -278,7 +282,7 @@
           data-aos-duration="6000"
           data-aos-easing="ease-in-out"
         >
-          <span>Want to get in touch?</span>
+          <span>Get in touch</span>
         </h1>
       </div>
       <div class="email-phone" data-aos="fade-in-up" data-aos-delay="900">
